[package]
name = "easy_ot"
version = "0.0.0"
description = "A Tauri App for translate and ocr"
authors = ["NPCDW"]
license = "MIT LICENSE"
repository = "https://github.com/NPCDW/EasyOT.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-read-text", "fs-all", "global-shortcut-all", "http-all", "path-all", "shell-open", "system-tray", "window-all"] }
enigo = {path = "libs/enigo"}
winreg = "0.11"
lazy_static = "1.4.0"
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
screenshot_win_dxgi = {path = "libs/screenshot-win-dxgi"}

[target.'cfg(unix)'.dependencies]
screenshots = "0.5.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
