[package]
name = "easy_ot"
version = "0.3.0"
description = "A Tauri App for translate and ocr"
authors = ["NPCDW"]
license = "MIT LICENSE"
repository = "https://github.com/NPCDW/EasyOT.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }
tauri = { version = "1.2", features = ["clipboard-read-text", "fs-all", "global-shortcut-all", "http-all", "os-all", "path-all", "shell-execute", "shell-open", "system-tray", "window-all"] }
enigo = "0.0.15"
lazy_static = "1.4.0"
rand = "0.8.5"
sysinfo = "0.28.4"
chrono = { version = "0.4.24", features = ["serde"] }

log = "0.4"
env_logger = "0.10.0"

r2d2 = "0.8"
r2d2_sqlite = "0.21"
sea-query = { version = "^0" }
sea-query-rusqlite = { version = "^0", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[target.'cfg(windows)'.dependencies]
screenshot_win_dxgi = {path = "libs/screenshot-win-dxgi"}
winreg = "0.11"

[target.'cfg(unix)'.dependencies]
screenshots = "0.5.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
